logs/watchdog_20251011_2045.log
[11/10/2025 20:45:01,72] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 20:45:01,92] END WATCHDOG 
